--- a/static/style.css
+++ b/static/style.css
@@ -2383,3 +2383,45 @@ select,
   background: #ccc;
   border-radius: 3px;
 }
+
+.ingredient-measurement {
+    font-size: 0.9em;
+    color: #666;
+    margin-top: 2px;
+    font-style: italic;
+}
+
+.btn-checkbox {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.btn-checkbox img {
+    width: 50px;
+    height: 50px;
+    object-fit: cover;
+    margin-bottom: 5px;
+}
+
+.btn-checkbox p {
+    margin: 0;
+    padding: 2px 0;
+}
+
+.ingredient-measurement-input {
+    width: 80px;
+    padding: 4px 8px;
+    margin-top: 4px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 0.9em;
+    text-align: center;
+}
+
+.ingredient-measurement-input:focus {
+    outline: none;
+    border-color: #359267;
+    box-shadow: 0 0 0 2px rgba(53, 146, 103, 0.2);
+}
